objects/SVMXC__Service_Level__c.object
<CustomObject>
    <description>Service Level indicates the details of coverage a customer is entitled to in a service contract. For example, a Bronze level coverage might be used to provide a response within a maximum of 24 hours whereas Platinum level coverage can be used for response within 4 hours. Service level can also be used to indicate exceptions, and coverage based on time-of-the-day (8 or 24) and day-of-the-week (5 or 7) support eligibility of a customer.</description>
    <fields>
        <fullName>SLA_External__c</fullName>
        <description>SLA_External ID</description>
        <externalId>true</externalId>
        <label>SLA_External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this service level is currently active and available for use</description>
        <inlineHelpText>Indicates if this service level is currently active and available for use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Detailed description of the service level. Information entered here are displayed on the Case entitlement screen when a service contract is selected</description>
        <inlineHelpText>Detailed description of the service level. Information entered here are displayed on the Case entitlement screen when a service contract is selected</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Effective_Date__c</fullName>
        <description>Date from which this service level is available for offering to customers through service contracts</description>
        <inlineHelpText>Date from which this service level is available for offering to customers through service contracts</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Tracked_On__c</fullName>
        <label>Initial Response Tracked On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Tracked_On__c</fullName>
        <label>Onsite Response Tracked On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Tracked_On__c</fullName>
        <label>Resolution Tracked On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Tracked_On__c</fullName>
        <label>Restoration Tracked On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <label>SLA Terms</label>
    <nameField>
        <label>Service Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>